--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!Doctype html>
 <head>
-<link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="style.css" />
 <title>Sample Webpage</title>
 </head>
 <body>
