--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </div>
 <div id="container">
 <div id="header">
-<img src="collabera.png" />
+<img src="AI.png" />
 <ul>
 <li><a href="#">Home</a></li>
 <li><a href="#">About</a></li>
